added license text incremented version to 1.0

--- a/ThinkSharp.Solutions/ThinkSharp.Solutions.csproj
+++ b/ThinkSharp.Solutions/ThinkSharp.Solutions.csproj
@@ -99,6 +99,10 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Key.snk" />
+    <Content Include="LICENSE.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
