--- a/ThinkSharp.Solutions/ThinkSharp.Solutions.csproj
+++ b/ThinkSharp.Solutions/ThinkSharp.Solutions.csproj
@@ -136,6 +136,10 @@
       <Link>lib\win32\x86\git2-15e1193.pdb</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="log4net.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="Resources\SolutionsCommand.png" />
     <Content Include="Resources\SolutionsPackage.ico" />
   </ItemGroup>
